@@ -25,3 +25,4 @@ Fix the naked style to support content that needs to be rendered.
 #970076: Remove old hook_update functions.
 #978768 by linclark: Fix notice with panel fields.
 #977296: Regions with _ such as with two column bricks would not save content.
+#987902: Fix flexible layout splitter resize brokenness.
